# nonebot-plugin-daily-oil-price

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_daily_oil_price/: DATA.json  __init__.py  config.py  utils.py
