[tool.poetry]
name = "nonebot-plugin-daily-oil-price"
version = "0.1.0"
description = "nonebot每日油价插件"
authors = ["wyeeeee <1563031828@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = ">2.1.0"
nonebot-adapter-onebot = ">2.3.0"
nonebot-plugin-apscheduler = ">=0.3.0"
httpx = ">0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
